md element styling in post.jsx

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,7 +2,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@tailwind screens;
 
 body {
   font-family: 'Heebo, sans-serif';
 }
+
+@screen sm {
+  .stylistic-quote-mark {
+    @apply block;
+  }
+}
+
+
