--- a/src/components/Pages/Home/Home.css
+++ b/src/components/Pages/Home/Home.css
@@ -1,6 +1,6 @@
 .carousel__dot {
-  /* background-color: red; */
+  background-color: black;
 }
 .carousel__dot--selected {
-  background-color: black;
+  background-color: #ff2b56;
 }
